2000-06-26  Greg McGary  <greg@mcgary.org>

	* Makeconfig: Add missing comment.
	* csu/Makefile (extra-objs, omit-deps, install-lib): Add
	BP-flavored startup object.
	($(objpfx)b$(start-installed-name)): New rule.
	* include/libc-symbols.h (symbol_set_declare): Change type
	of `__start_##set' and `__stop_##set' to pointer-to-function.
	(symbol_set_declare): Change type of `set' to array of
	pointer-to-function.
	* include/set-hooks.h (RUN_HOOK): Change type of `ptr' to
	pointer-to-function.

	* string/bits/string2.h: Inhibit inlines if __BOUNDED_POINTERS__.

	* sysdeps/unix/sysv/linux/syscalls.list: Add missing signatures.
	Remove clock_* and timer_* entries.
	* sysdeps/unix/sysv/linux/powerpc/syscalls.list: Replace
	arg-count with signatures.

	* sysdeps/i386/add_n.S: Wrap entry-point symbol in BP_SYM ().
	Check bounds of arguments.
	* sysdeps/i386/addmul_1.S: Likewise.
	* sysdeps/i386/lshift.S: Likewise.
	* sysdeps/i386/mul_1.S: Likewise.
	* sysdeps/i386/rshift.S: Likewise.
	* sysdeps/i386/sub_n.S: Likewise.
	* sysdeps/i386/submul_1.S: Likewise.
	* sysdeps/i386/i586/add_n.S: Likewise.
	* sysdeps/i386/i586/addmul_1.S: Likewise.
	* sysdeps/i386/i586/lshift.S: Likewise.
	* sysdeps/i386/i586/rshift.S: Likewise.
	* sysdeps/i386/i586/sub_n.S: Likewise.
	* sysdeps/i386/i686/add_n.S: Likewise.

	* sysdeps/i386/memchr.S: Likewise.
	* sysdeps/i386/memcmp.S: Likewise.
	* sysdeps/i386/rawmemchr.S: Likewise.
	* sysdeps/i386/i586/bzero.S: Likewise.
	* sysdeps/i386/i586/memcpy.S: Likewise.
	* sysdeps/i386/i586/mempcpy.S: Likewise.
	* sysdeps/i386/i586/memset.S: Likewise.
	* sysdeps/i386/i686/bzero.S: Likewise.
	* sysdeps/i386/i686/memcpy.S: Likewise.
	* sysdeps/i386/i686/mempcpy.S: Likewise.
	* sysdeps/i386/i686/memset.S: Likewise.

	* sysdeps/i386/stpcpy.S: Likewise.
	* sysdeps/i386/stpncpy.S: Likewise.
	* sysdeps/i386/strchr.S: Likewise.
	* sysdeps/i386/strchrnul.S: Likewise.
	* sysdeps/i386/strcspn.S: Likewise.
	* sysdeps/i386/strpbrk.S: Likewise.